--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "expo": {
     "name": "Yo Soy Muy Inteligente",
     "icon": "./android/app/src/main/res/mipmap-xhdpi/ic_launcher.png",
-    "version": "0.8.1",
+    "version": "0.8.8",
     "description": "Developed by DreamTeam for Software Engineering II - Universidad Nacional de Colombia",
-    "slug": "ysmi",
+    "slug": "ysminew",
     "sdkVersion": "27.0.0",
     "primaryColor": "#5D99C6",
     "orientation": "portrait",
@@ -13,6 +13,7 @@
     },
     "android": {
       "package": "com.dreamteam.yosoymuyinteligente"
-    }
+    },
+    "githubUrl": "https://github.com/DreamTeamUN/YoSoyMuyInteligente_FrontEnd"
   }
 }
